src/test/ui/feature-gates/feature-gate-trace_macros.stderr
error[E0658]: `trace_macros` is not stable enough for use and is subject to change
  --> $DIR/feature-gate-trace_macros.rs:2:5
   |
LL |     trace_macros!(true);
   |     ^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29598
   = help: add #![feature(trace_macros)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
